# turkish-string

./: LICENSE  README.md  pyproject.toml
test/: test_capitalize_tr.py  test_lower_tr.py  test_title_tr.py  test_upper_tr.py
turkish_string/: __init__.py  base.py
