[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "turkish-string"
version = "1.0.0"

requires-python = ">=3.8"

authors = [
  {name = "Omer Faruk Sari", email = "info@aqilan.com"}
]

maintainers = [
  {name = "Omer Faruk Sari", email = "info@aqilan.com"}
]

description = "Provides alternative string methods to Python's built-in upper(), lower(), capitalize() and title() that work for turkish characters."

readme = "README.md"

license = {file = "LICENSE"}

keywords = ["turkish", "upper", "lower", "title", "capitalize", "encoding", "upper()", "lower()", "title()", "capitalize()"]

classifiers = [
  "Development Status :: 5 - Production/Stable",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: BSD License",
  "Operating System :: OS Independent",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12"
]


[project.urls]
Homepage = "https://github.com/o-sari/turkish-string"
Repository = "https://github.com/o-sari/turkish-string"
Issues = "https://github.com/o-sari/turkish-string/issues"